feat: domain (auth, signup, some servicse), fixed: persistence